mass update
